--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://yourusername.github.io/ReactDay1",
+  "homepage": "https://Kemixd3.github.io/ReactDay1/",
   "scripts": {
     "deploy": "gh-pages -d dist",
     "dev": "vite",
